<resources>
    <string name="app_name">My Application</string>

    <string name="btn_show_toast">Show Toast</string>
    <string name="btn_move_to_next_activity">Move to next Activity</string>
    <string name="btn_share_to_apps">Share to Other Apps</string>
    <string name="btn_hobbies">Show my Hobbies</string>
    <string name="et_enter_msg">Enter a Message</string>

    <string name="btn_was_clicked">Button was clicked !</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>
