<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="18dp"
        android:text="@string/btn_show_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendMsgToNextActivity" />

    <EditText
        android:id="@+id/etUserMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/et_enter_msg"
        android:ems="10"
        android:hint="@string/et_enter_msg"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSendMsgToNextActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="18dp"
        android:text="@string/btn_move_to_next_activity"
        app:layout_constraintEnd_toEndOf="@+id/btnShareToOtherApps"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/btnShareToOtherApps"
        app:layout_constraintTop_toBottomOf="@+id/btnShareToOtherApps" />

    <Button
        android:id="@+id/btnShareToOtherApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="18dp"
        android:text="@string/btn_share_to_apps"
        app:layout_constraintEnd_toEndOf="@+id/btnRecyclerViewDemo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnRecyclerViewDemo"
        app:layout_constraintTop_toBottomOf="@+id/btnRecyclerViewDemo" />

    <Button
        android:id="@+id/btnRecyclerViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="18dp"
        android:text="@string/btn_hobbies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etUserMessage"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/etUserMessage"
        app:layout_constraintTop_toBottomOf="@+id/etUserMessage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnfragments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="18dp"
        android:text="Fragment Button"
        app:layout_constraintEnd_toEndOf="@+id/btnShowToast"
        app:layout_constraintStart_toStartOf="@+id/btnShowToast"
        app:layout_constraintTop_toBottomOf="@+id/btnShowToast">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>